# hmrf

./: CMakeLists.txt  applymask.cxx  common.h  get012.cxx  geticc.cxx  groupmrfmain.cxx  utility.cxx  utility.h
newimp/: common.h
